--- a/BenMakesGames.PlayPlayMini.BeepBoop/BenMakesGames.PlayPlayMini.BeepBoop.csproj
+++ b/BenMakesGames.PlayPlayMini.BeepBoop/BenMakesGames.PlayPlayMini.BeepBoop.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <Version>0.1.0</Version>
+        <Version>0.1.1</Version>
         <Authors>Ben Hendel-Doying</Authors>
         <Company>Ben Hendel-Doying</Company>
         <Description>An extension for PlayPlayMini which adds methods for generating &amp; playing simple waveforms.</Description>
         <Copyright>2022 Ben Hendel-Doying</Copyright>
         <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-        <PackageProjectUrl>https://github.com/BenMakesGames/PlayPlayMini.BeepBoop</PackageProjectUrl>
-        <PackageTags>monogame game engine framework di state</PackageTags>
+        <PackageProjectUrl>https://github.com/BenMakesGames/PlayPlayMini</PackageProjectUrl>
+        <PackageTags>monogame playplaymini sound generation square triangle saw sine wave waveform</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Nullable>enable</Nullable>
         <WarningsAsErrors>Nullable</WarningsAsErrors>
