--- a/BenMakesGames.PlayPlayMini.GraphicsExtensions/BenMakesGames.PlayPlayMini.GraphicsExtensions.csproj
+++ b/BenMakesGames.PlayPlayMini.GraphicsExtensions/BenMakesGames.PlayPlayMini.GraphicsExtensions.csproj
@@ -1,16 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <Version>0.1.1</Version>
+        <TargetFramework>net6.0</TargetFramework>
+        <Version>0.0.1</Version>
         <Authors>Ben Hendel-Doying</Authors>
         <Company>Ben Hendel-Doying</Company>
-        <Description>An extension for PlayPlayMini which adds methods for generating &amp; playing simple waveforms.</Description>
-        <Copyright>2022 Ben Hendel-Doying</Copyright>
+        <Description>Some GraphicsManager extensions for PlayPlayMini.</Description>
+        <Copyright>2023 Ben Hendel-Doying</Copyright>
         <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageProjectUrl>https://github.com/BenMakesGames/PlayPlayMini</PackageProjectUrl>
         <RepositoryUrl>https://github.com/BenMakesGames/PlayPlayMini</RepositoryUrl>
-        <PackageTags>monogame playplaymini sound generation square triangle saw sine wave waveform</PackageTags>
+        <PackageTags>monogame playplaymini graphics extensions animations text</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Nullable>enable</Nullable>
         <WarningsAsErrors>Nullable</WarningsAsErrors>
@@ -22,6 +23,10 @@
 
     <ItemGroup>
         <None Include="..\LICENSE.md">
+            <Pack>True</Pack>
+            <PackagePath />
+        </None>
+        <None Include="README.md">
             <Pack>True</Pack>
             <PackagePath />
         </None>
