before I forget for the next release: added <GenerateDocumentationFile>true</GenerateDocumentationFile> so we don't lose docblocks

--- a/BenMakesGames.PlayPlayMini.UI/BenMakesGames.PlayPlayMini.UI.csproj
+++ b/BenMakesGames.PlayPlayMini.UI/BenMakesGames.PlayPlayMini.UI.csproj
@@ -16,6 +16,7 @@
     <PackageIcon>package-icon.png</PackageIcon>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
