--- a/BenMakesGames.PlayPlayMini/BenMakesGames.PlayPlayMini.csproj
+++ b/BenMakesGames.PlayPlayMini/BenMakesGames.PlayPlayMini.csproj
@@ -16,6 +16,7 @@
     <PackageIcon>package-icon.png</PackageIcon>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
