API change to give devs more control: a PlayingSong object which can be used to set looping, and query for current playtime

--- a/BenMakesGames.PlayPlayMini.NAudio/BenMakesGames.PlayPlayMini.NAudio.csproj
+++ b/BenMakesGames.PlayPlayMini.NAudio/BenMakesGames.PlayPlayMini.NAudio.csproj
@@ -4,8 +4,8 @@
         <Authors>Ben Hendel-Doying</Authors>
         <Company>Ben Hendel-Doying</Company>
         <Description>Get seamless looping music, and cross-fade, in your MonoGame-PlayPlayMini game using NAudio.</Description>
-        <Copyright>2024 Ben Hendel-Doying</Copyright>
-        <Version>0.6.0</Version>
+        <Copyright>2024-2025 Ben Hendel-Doying</Copyright>
+        <Version>0.7.0</Version>
 
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageTags>monogame playplaymini naudio music</PackageTags>
